fixed lightbox X button not showing up as black

--- a/html/css/lightbox.css
+++ b/html/css/lightbox.css
@@ -1,8 +1,3 @@
-.lightbox a {
-	color: #5A5A5A;
-	font-weight: bold;
-}
-
 .lightbox {
 	background-color:#CDCDCD;
 	border:1px solid #000;
@@ -45,13 +40,22 @@
 }
 
 .lightbox-x {
-	color:#000;
+	color:#000!important;
 	float:right;
 	z-index:90002;
 }
 
 .lightbox-x:hover {
 	color:#000;
+}
+
+.lightbox a {
+	color: #5A5A5A;
+	font-weight: bold;
+}
+
+.lightbox td {
+	width: ;
 }
 
 .lightbox textarea#sql-statement {
